feat: agregar campo de pasajeros

--- a/formulario.html
+++ b/formulario.html
@@ -23,7 +23,7 @@
         <label>Duración del Viaje (días):</label>
         <input type="number" name="duracion" required><br>
 
-        <label>Número de Pasajeros:</label>
+        <label>Numero de Pasajeros:</label>
         <input type="number" name="pasajeros" required><br>
         
         <input type="submit" value="Buscar">
